tests/ui/obs_forge.stderr
error[E0308]: mismatched types
 --> tests/ui/obs_forge.rs:5:16
  |
5 |         _seal: (),
  |                ^^ expected `Token`, found `()`

error[E0599]: no function or associated item named `new` found for struct `AtLeastOnce` in the current scope
 --> tests/ui/obs_forge.rs:6:37
  |
6 |         at_least_once: AtLeastOnce::new(CheckpointId::new("obs-forge")),
  |                                     ^^^ function or associated item not found in `AtLeastOnce`
  |
help: there is a method `ne` with a similar name
  |
6 -         at_least_once: AtLeastOnce::new(CheckpointId::new("obs-forge")),
6 +         at_least_once: AtLeastOnce::ne(CheckpointId::new("obs-forge")),
  |
